# python-project-scaffold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  template.manifest.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  plugin-contract.yml  plugin-smoke.yml  release-skill.yml
docs/adr/: 0001-decoupled-plugin-versioning.md
docs/superpowers/audits/: 2026-05-14-plugin-v0.1-audit.md
docs/superpowers/plans/: 2026-05-14-claude-plugin-v0.1.md  2026-05-14-claude-plugin-v0.2-roadmap.md
docs/superpowers/specs/: 2026-05-13-new-project-skill-testing-design.md  2026-05-14-claude-plugin-design.md
examples/: README.md  values.example.json
plugins/new-project/: CHANGELOG.md  README.md  SKILL_AUTHORING.md
plugins/new-project/.claude-plugin/: plugin.json
plugins/new-project/skills/audit-runner/: SKILL.md
plugins/new-project/skills/audit-runner/dimensions/: ci.md  conventions.md  correctness.md  dependency.md  design.md  docs.md  interface.md  observability.md  performance.md  security.md  tests.md
plugins/new-project/skills/changelog-normalizer/: SKILL.md
plugins/new-project/skills/new-project/: SKILL.md
plugins/new-project/skills/release-helper/: SKILL.md
scripts/: init-project.py  refresh_dev_deps.py  scaffold.sh  substitute.py
template/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GUIDELINES.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
template/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
template/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
template/.github/workflows/: ci.yml
template/docs/: concepts.md  enforcement-model.md  setup-branch-protection.md
template/docs/adr/: ADR-0000-scaffold-choices.md  ADR-template.md  README.md
template/docs/dev-notes/: README.md
template/src/<<PACKAGE_NAME>>/: __init__.py  example.py
template/tests/: test_cohesion.py  test_example.py  test_rules.py
tests/: test_init_project.py  test_refresh_dev_deps.py  test_scaffold.py  test_skill_flow.py  test_template_install_contract.py
tests/contracts/: test_init_project_cli.py
tests/skills/: test_plugin_smoke.py  test_skill_convention.py
tests/skills/changelog_normalizer/: test_normalize_core.py  test_preamble_preservation.py  test_subheading_order.py
tooling/: README.md
tooling/claude-code/: DEPRECATED.md  new-project.md
tooling/claude-code/scripts/: package.sh  write_license.py
(+9 files in other folders)
